--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -12,7 +12,7 @@ head:
     # https://developer.mozilla.org/en-US/docs/Web/Manifest
     manifest:
         # Name of the web application (default to the site title)
-        name: 
+        name: LNVPE Warehouse
         # The displayed name of the web application
         # when there is not enough space to display full name
         short_name: 
@@ -118,7 +118,7 @@ navbar:
 # Page footer configurations
 footer:
     # Copyright text
-    copyright: © 2019
+    copyright: © 2023
     # Links to be shown on the right of the footer section
     links:
         Creative Commons:
@@ -129,7 +129,7 @@ footer:
             url: https://creativecommons.org/licenses/by/4.0/
         Download on GitHub:
             icon: fab fa-github
-            url: https://github.com/ppoffice/hexo-theme-icarus
+            url: https://github.com/lnvpe
 # Article related configurations
 article:
     # Code highlight settings
@@ -241,11 +241,11 @@ widgets:
         position: left
         type: profile
         # Author name
-        author: LNV Platform Enablement
+        author: LNVPE
         # Author title
-        author_title: Your title
+        author_title: Platform Enablement Team
         # Author's current location
-        location: China,Shanghai
+        location: Shanghai, China
         # URL or path to the avatar image
         avatar: 
         # Whether show the rounded avatar image
@@ -253,12 +253,12 @@ widgets:
         # Email address for the Gravatar
         gravatar: 
         # URL or path for the follow button
-        follow_link: https://github.com/ppoffice
+        follow_link: https://github.com/lnvpe
         # Links to be shown on the bottom of the profile widget
         social_links:
             Github:
                 icon: fab fa-github
-                url: https://github.com/ppoffice
+                url: https://github.com/lnvpe
             Facebook:
                 icon: fab fa-facebook
                 url: https://facebook.com
