--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Hexo
+title: LNVPE Warehouse
 subtitle: ''
 description: ''
 keywords: null
-author: John Doe
+author: Tianyi Liu
 language: en
 timezone: ''
 url: https://lnvpe.github.io/blog
