--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ subtitle: ''
 description: ''
 keywords: null
 author: Tianyi Liu
-language: zh-cn
+language: zh-CN
 timezone: ''
 url: https://lnvpe.github.io/blog
 permalink: ':year/:month/:day/:title/'
