--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: LNVPE Warehouse
 subtitle: ''
 description: ''
 keywords: null
-author: Tianyi Liu
+author: Platform Enablement Team
 language: zh-CN
 timezone: ''
 url: https://lnvpe.github.io/blog
