--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ keywords: null
 author: Platform Enablement Team
 language: zh-CN
 timezone: ''
-url: https://lnvpe.github.io/blog
+url: https://blog.lnvpe.com
 permalink: ':year/:month/:day/:title/'
 permalink_defaults: null
 pretty_urls:
