--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -257,21 +257,21 @@ widgets:
         # Links to be shown on the bottom of the profile widget
         social_links:
             Lenovo Website:
-                icon: fab fa-laptop
+                icon: fa-regular fa-laptop
                 url: https://lenovo.com.cn
             Github:
                 icon: fab fa-github
                 url: https://github.com/lnvpe
             Weibo:
-                icon: fab fa-weibo
+                icon: fa-brands fa-weibo
                 url: https://weibo.com/lenovo
             Mail:
-                icon: fab fa-envelope
+                icon: fa-regular fa-envelope
                 url: mailto://liuty24@lenovo.com
     # Table of contents widget configurations
     -
         # Where should the widget be placed, left sidebar or right sidebar
-        position: left
+        position: right
         type: toc
         # Whether to show the index of each heading
         index: true
@@ -298,11 +298,11 @@ widgets:
         # Where should the widget be placed, left sidebar or right sidebar
         position: left
         type: recent_posts
-    # Archives widget configurations
-    -
-        # Where should the widget be placed, left sidebar or right sidebar
-        position: left
-        type: archives
+    # # Archives widget configurations
+    # -
+    #     # Where should the widget be placed, left sidebar or right sidebar
+    #     position: left
+    #     type: archives
     # Tags widget configurations
     -
         # Where should the widget be placed, left sidebar or right sidebar
